# ai_summarizer

./: .gitignore  pyproject.toml
ai_summarizer/: __init__.py  config.json  config.py  custom_formatter.py  response_generator.py  retrieval_chain.py
ai_summarizer/docs/: recipe.md
ai_summarizer/pages/: prompt.py
